# rit-textbook-tool

./: .gitignore  README.md  download.py  requirements.txt  setup.cfg  view.py
TextbookTool/: __init__.py  download.py  manage.py  settings.ini.sample  view.py
TextbookTool/barnesandnoble/: __init__.py  data_helper.py  downloader.py  web_helper.py
TextbookTool/barnesandnoble/model/: course.py  textbook.py
TextbookTool/barnesandnoble/utilities/: progressbar.py
TextbookTool/db/: connector.py  schema.py
TextbookTool/db_repository/: migrate.cfg
TextbookTool/db_repository/versions/: 001_Initial_database_schema.py
TextbookTool/utilities/: config.py
barnesandnoble/: __init__.py  data_helper.py  web_helper.py
barnesandnoble/model/: __init__.py  department.py  section.py  textbook.py
barnesandnoble/utilities/: __init__.py
