[metadata]
name = TextbookTool
author = Steven Mirabito
author-email = steven@stevenmirabito.com
summary = Toolkit for downloading and interacting with textbook data from Barnes & Noble, specific to RIT
description-file = README.md
license = Apache v2.0
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: Apache License v2.0
	Programming Language :: Python

[files]
packages_root = TextbookTool
packages =
        TextbookTool
        TextbookTool.barnesandnoble
        TextbookTool.barnesandnoble.model
        TextbookTool.barnesandnoble.utilities

extra_files =
        README.md
        LICENSE
        requirements.txt
        setup.cfg
        setup.py